--- a/style.css
+++ b/style.css
@@ -191,9 +191,9 @@ body {
       input[type="number"] { padding: 0.4rem; }
    
 
-@media (max-width: 768px) {
+@media (max-width: 860px) {
   .container { padding: 1.5rem; margin: 1rem; }
-  /* La riga per la tabella è stata rimossa */
+  table { display: block; overflow-x: auto; white-space: nowrap; } /* <-- PROBLEMA */
   thead, tbody, th, td, tr { display: table-row; }
   th, td { min-width: 70px; }
   td img { width: 50px; height: 50px; }
